Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.2
-
None
-
96fb3a30457c8925431b67c0f35abb2833b7fb7c (qt/qtwebengine/5.12)
Description
Caused by https://codereview.qt-project.org/240829
Attachments
Issue Links
- is duplicated by
-
QTBUG-75302 QWebEngineView setPage doesn't delete old page
-
- Closed
-
- resulted from
-
QTBUG-68727 focusProxy() isn't set correctly on redirects
-
- Closed
-
For Gerrit Dashboard: QTBUG-75131 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
258874,4 | Fix QWebEngineView::setPage not deleting old page | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |